# ecad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Sconstruct  TODO.md  py
examples/: .gitignore  CMakeLists.txt  setup_design.cpp  sic.cpp  test.cpp  thermal.cpp  vlsi.cpp
examples/kicad/: JetsonNano.cpp
examples/python/: WolfSpeed.py
examples/wolfspeed/: Common.hpp  SetupDesign.cpp  StaticThermal.cpp  StaticThermalSimulation.cpp  TransientThermal.cpp
py/: CMakeLists.txt  PyEcad.cpp  PyEcadGeometry.hpp  PyEcadTest.py  SConscript
py.boost.deprecated/: CMakeLists.txt  PyEcad.cpp  PyEcadTest.py
src/: CMakeLists.txt  EBaseCollections.h  ECadAlias.h  ECadCommon.h  ECadConfig.h  ECadDef.h  ECadPyModule.cpp  ECadSerialization.h  ECadSettings.h  ECadUnits.h  ECadVersion.h  ECell.cpp  ECell.h  ECellCollection.cpp  ECellCollection.h  ECellInst.cpp  ECellInst.h  ECellInstCollection.cpp  ECellInstCollection.h  ECollection.cpp  ECollection.h  ECollectionCollection.cpp  ECollectionCollection.h  EComponent.cpp  EComponent.h  EComponentCollection.cpp  EComponentCollection.h  EComponentDef.cpp  EComponentDef.h  EComponentDefCollection.cpp  EComponentDefCollection.h  EComponentDefPin.cpp  EComponentDefPin.h  EComponentDefPinCollection.cpp  EComponentDefPinCollection.h  EConnObj.cpp  EConnObj.h  EConnObjCollection.cpp  EConnObjCollection.h  EDataMgr.cpp  (+55 more)
src/basic/: CMakeLists.txt  ECadAlias.h  ECadCommon.h  ECadConfig.h  ECadDef.h  ECadSerialization.h  ECadSettings.h  ECadUnits.h  ECadVersion.h  ECollection.h  ELookupTable.h  EShape.cpp  ETransform.h  EUidGenerator.h  Protocol.h
src/collection/: CMakeLists.txt  ECellCollection.cpp  ECellCollection.h  ECellInstCollection.cpp  ECellInstCollection.h  ECollectionCollection.cpp  ECollectionCollection.h  EComponentCollection.cpp  EComponentCollection.h  EComponentDefCollection.cpp  EComponentDefCollection.h  EComponentDefPinCollection.cpp  EComponentDefPinCollection.h  EConnObjCollection.cpp  EConnObjCollection.h  EDefinitionCollection.cpp  EDefinitionCollection.h  EHierarchyObjCollection.cpp  EHierarchyObjCollection.h  ELayerCollection.cpp  ELayerCollection.h  ELayerMapCollection.cpp  ELayerMapCollection.h  EMaterialDefCollection.cpp  EMaterialDefCollection.h  EModelCollection.cpp  EModelCollection.h  ENetCollection.cpp  ENetCollection.h  EPadstackDefCollection.cpp  EPadstackDefCollection.h  EPadstackInstCollection.cpp  EPadstackInstCollection.h  EPrimitiveCollection.cpp  EPrimitiveCollection.h
src/design/: CMakeLists.txt  ECell.cpp  ECell.h  ECellInst.cpp  ECellInst.h  ECellInstCollection.cpp  ECollectionCollection.cpp  ECollectionCollection.h  EComponent.cpp  EComponent.h  EComponentCollection.cpp  EComponentCollection.h  EComponentDef.cpp  EComponentDef.h  EComponentDefCollection.h  EComponentDefPin.cpp  EComponentDefPin.h  EComponentDefPinCollection.cpp  EConnObj.cpp  EConnObj.h  EDatabase.cpp  EDatabase.h  EDefinition.cpp  EDefinition.h  EDefinitionCollection.cpp  EHierarchyObj.cpp  EHierarchyObj.h  ELayer.cpp  ELayer.h  ELayerCollection.cpp  ELayerCollection.h  ELayerMap.cpp  ELayerMap.h  ELayerMapCollection.cpp  ELayerMapCollection.h  ELayoutView.cpp  ELayoutView.h  EMaterialDef.cpp  EMaterialDef.h  EMaterialDefCollection.cpp  (+21 more)
src/extension/: CMakeLists.txt  ECadExtension.cpp  ECadExtension.h
src/extraction/: CMakeLists.txt
src/interface/: ICell.h  ICellCollection.h  ICellInst.h  ICellInstCollection.h  ICollection.h  IComponent.h  IComponentCollection.h  IComponentDef.h  IComponentDefCollection.h  IComponentDefPin.h  IComponentDefPinCollection.h  IConnObj.h  IConnObjCollection.h  IDatabase.h  IDefinition.h  IDefinitionCollection.h  IHierarchyObj.h  IHierarchyObjCollection.h  IIterator.h  ILayer.h  ILayerCollection.h  ILayerMap.h  ILayerMapCollection.h  ILayoutView.h  IMaterialDef.h  IMaterialDefCollection.h  IMaterialProp.h  IModel.h  IModelCollection.h  INet.h  INetCollection.h  IPadstackDef.h  IPadstackDefCollection.h  IPadstackDefData.h  IPadstackInst.h  IPadstackInstCollection.h  IPrimitive.h  IPrimitiveCollection.h  Interface.h
src/interfaces/: ICell.h  ICellCollection.h  ICellInst.h  ICellInstCollection.h  ICollection.h  ICollectionCollection.h  IComponent.h  IComponentCollection.h  IComponentDef.h  IComponentDefCollection.h  IComponentDefPin.h  IComponentDefPinCollection.h  IConnObj.h  IConnObjCollection.h  IDatabase.h  IDefinition.h  IDefinitionCollection.h  IHierarchyObj.h  IHierarchyObjCollection.h  IIterator.h  ILayer.h  ILayerCollection.h  ILayerMap.h  ILayerMapCollection.h  ILayoutView.h  IMaterialDef.h  IMaterialDefCollection.h  IMaterialProp.h  IModel.h  INet.h  INetCollection.h  IPadstackDef.h  IPadstackDefCollection.h  IPadstackDefData.h  IPadstackInst.h  IPadstackInstCollection.h  IPrimitive.h  IPrimitiveCollection.h  IThermalModel.h
src/model/: CMakeLists.txt
src/models/: EThermalModel.cpp  EThermalModel.h
src/protocols/: Clonable.h  Printable.h  Transformable.h
src/simulation/: CMakeLists.txt  ELayerStackMeshGeneration.cpp  ELayerStackMeshGeneration.h  EMetalFractionMapping.cpp  EMetalFractionMapping.h  ESimulationSettings.h  EThermalConductivityExtraction.h  EThermalNetworkExtraction.cpp  EThermalNetworkExtraction.h  EThermalNetworkSimulator.h
src/solver/: CMakeLists.txt
src/solvers/: EThermalNetworkSolver.cpp  EThermalNetworkSolver.h
src/utilities/: EBoundaryCalculator.cpp  EBoundaryCalculator.h  EFlattenUtility.cpp  EFlattenUtility.h  ELayout2ChipThermalModelUtility.h  ELayout2CtmUtility.cpp  ELayout2CtmUtility.h  ELayoutConnectivity.cpp  ELayoutConnectivity.h  ELayoutMergeUtility.cpp  ELayoutMergeUtility.h  ELayoutModifier.cpp  ELayoutModifier.h  ELayoutPolygonMerger.cpp  ELayoutPolygonMerger.h  ELayoutRetriever.cpp  ELayoutRetriever.h  ELayoutViewRenderer.cpp  ELayoutViewRenderer.h  EMetalFractionMapping.cpp  EMetalFractionMapping.h
src/utility/: CMakeLists.txt  EBoundaryCalculator.cpp  EBoundaryCalculator.h  EFlattenUtility.cpp  EFlattenUtility.h  ELayout2CtmUtility.cpp  ELayout2CtmUtility.h  ELayoutConnectivity.cpp  ELayoutConnectivity.h  ELayoutMergeUtility.cpp  (+11 more)
(+227 files in other folders)
